crates/backyard-lexer/tests/snapshots/keywords__match_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Match
  value:
    - 109
    - 97
    - 116
    - 99
    - 104
  line: 1
  column: 0
  offset: 0
