crates/backyard-lexer/tests/snapshots/keywords__namespace_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Namespace
  value:
    - 110
    - 97
    - 109
    - 101
    - 115
    - 112
    - 97
    - 99
    - 101
  line: 1
  column: 0
  offset: 0
