crates/backyard-lexer/tests/snapshots/keywords__new_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 256
expression: tokens
snapshot_kind: text
---
- token_type: New
  value: new
  line: 1
  column: 0
  offset: 0
