crates/backyard-lexer/tests/snapshots/keywords__null_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: "Null"
  value:
    - 110
    - 117
    - 108
    - 108
  line: 1
  column: 0
  offset: 0
