crates/backyard-lexer/tests/snapshots/keywords__or_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Or
  value:
    - 111
    - 114
  line: 1
  column: 0
  offset: 0
