crates/backyard-lexer/tests/snapshots/keywords__parent_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 316
expression: tokens
snapshot_kind: text
---
- token_type: Parent
  value: parent
  line: 1
  column: 0
  offset: 0
