crates/backyard-lexer/tests/snapshots/keywords__print_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 266
expression: tokens
snapshot_kind: text
---
- token_type: Print
  value: print
  line: 1
  column: 0
  offset: 0
