crates/backyard-lexer/tests/snapshots/keywords__private_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 426
expression: tokens
snapshot_kind: text
---
- token_type: Private
  value: private
  line: 1
  column: 0
  offset: 0
- token_type: PrivateGet
  value: private(get)
  line: 1
  column: 8
  offset: 8
- token_type: PrivateSet
  value: private(set)
  line: 1
  column: 21
  offset: 21
