crates/backyard-lexer/tests/snapshots/keywords__protected_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 432
expression: tokens
snapshot_kind: text
---
- token_type: Protected
  value: protected
  line: 1
  column: 0
  offset: 0
- token_type: ProtectedGet
  value: protected(get)
  line: 1
  column: 10
  offset: 10
- token_type: ProtectedSet
  value: protected(set)
  line: 1
  column: 25
  offset: 25
