crates/backyard-lexer/tests/snapshots/keywords__public_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 281
expression: tokens
snapshot_kind: text
---
- token_type: Public
  value: public
  line: 1
  column: 0
  offset: 0
