crates/backyard-lexer/tests/snapshots/keywords__readonly_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 286
expression: tokens
snapshot_kind: text
---
- token_type: Readonly
  value: readonly
  line: 1
  column: 0
  offset: 0
