crates/backyard-lexer/tests/snapshots/keywords__require_once_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 296
expression: tokens
snapshot_kind: text
---
- token_type: RequireOnce
  value: require_once
  line: 1
  column: 0
  offset: 0
